If a password was deleted somehow from the store, the password dropdown should forget about it immediately.

Before the CL:
- you open a page with multiple credentials saved.
- delete one through the bubble.
- the credentials is still presented in the dropdown on click.

After the CL the credential is removed from the dropdown. If there is nothing
to show then the dropdown won't appear.

Bug: 870220
Change-Id: I485a3243f51b0d5c738ec407c4ec71dc71aa06ff
Reviewed-on: https://chromium-review.googlesource.com/1226598
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Vaclav Brozek <vabr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591382}
Former-commit-id: 4a9b1da85811ac1fef711e6e6e986393e76f73e1